--- a/local_mac_build.yml
+++ b/local_mac_build.yml
@@ -3,8 +3,8 @@
   connection: local
   gather_facts: no
   roles:
-#     - homebrew/tap
-#     - homebrew/applications
-#    - homebrew/cli
-#    - users
+    - homebrew/tap
+    - homebrew/applications
+    - homebrew/cli
+    - users
     - drush
