--- a/roles/homebrew/cli/tasks/main.yml
+++ b/roles/homebrew/cli/tasks/main.yml
@@ -5,5 +5,6 @@
 
 - name: Install Homebrew Packages
   homebrew:
-    name: "{{ brew_packages }}"
+    name: "{{ item }}"
     state: "present"
+  with_items: "{{ brew_packages }}"
